<resources>
    <string name="app_name">Simple Music</string>


    <string name="music_channel">Music</string>
    <string name="default_time" translatable="false">0:00</string>

    <!-- Activity: MainActivity -->
    <string name="search">Search</string>

    <!-- Fragment: LocalMusic -->
    <string name="title_LocalMusic">Local Music</string>

    <!-- Fragment: Playlist -->
    <string name="title_Playlist">Playlist</string>

    <string name="authorize">Grant</string>
    <string name="exit">Exit</string>
    <string name="menu_search">Search</string>
    <string name="hint_searchview_music">Song or Artist</string>
    <string name="use_preset">Use preset</string>
    <string name="reset">Reset</string>
    <string name="not_playing">Not Playing</string>
    <string name="action_prev">Previous</string>
    <string name="action_play">Play</string>
    <string name="action_next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="sound">Sound</string>
    <string name="follow_system">Follow System</string>
    <string name="sample_song">Sample Song</string>
    <string name="playlist_image">playlist_image</string>
    <string name="play">Play</string>
    <string name="view_in_file_manager">View in File Manager</string>
    <string name="music_info">Music Info</string>
    <string name="sample_artist">Sample Artist</string>
    <string name="check_again">Check again</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission not granted</string>

    <string name="music_image">Music Image</string>

    <!-- Music Info -->
    <string name="song">Song</string>
    <string name="artist">Singer</string>
    <string name="album">Album</string>
    <string name="bitrate">Bitrate</string>
    <string name="capture_frame_rate">Capture Frame Rate</string>
    <string name="duration">Duration</string>
    <string name="path">Path</string>
    <string name="size">Size</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <string name="user_interface">User‘s Interface</string>
    <string name="theme_color">Theme Color</string>
    <string name="night_mode">Night Mode</string>
    <string name="immersion_navigation_bar">Immersion Navigation Bar</string>
    <string name="immersion_status_bar">Immersion Status Bar</string>
    <string name="immersion_hint">Only works when night mode is disabled</string>

    <string name="scan">Scan</string>
    <string name="filter_short_audio">Filter Short Audio</string>
    <string name="filter_small_audio">Filter Small Audio</string>

    <string name="audio_and_play">Audio and Play</string>
    <string name="play_synchronously">Play synchronously with other applications</string>
    <string name="equalizer">Equalizer</string>
    <string name="system_sound_settings">System Sound Settings</string>

    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="version_name" translatable="false">1.0</string>

    <!-- General Settings -->
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Colors -->
    <string name="titian_red">Titian Red</string>
    <string name="bordeaux_red">Bordeaux Red</string>
    <string name="marrs_green">Marrs Green</string>
    <string name="klein_blue">Klein Blue</string>
    <string name="sennelier_yellow">Sennelier Yellow</string>
    <string name="lavender_purple">Lavender Purple</string>
    <string name="white">White</string>

    <!-- Hint Texts -->
    <string name="require_storage_permission">This application requires permission of accessing
        storage in order to access your music files. Please grant this permission, otherwise it
        may not function as what it is supposed to.</string>
    <string name="grant_permission_hint_6">Please grant this application access to \"Storage\" in \"Permission\" page.</string>
    <string name="grant_permission_hint_10">Please grant this application access to \"Media and File\" in \"Permission\" page.</string>
    <string name="grant_permission_hint_13">Please grant this application access to \"Music and Audio\" in \"Permission\" page.</string>
    <string name="delete">Delete</string>
    <string name="strong_scan_mode_hint">Scan music files every time when you come back to this application from multi-task interface.</string>
    <string name="strong_scan_mode">Strong Scan Mode</string>

</resources>