<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/mid_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_name_content"
            android:text="@string/song" />

        <TextView
            android:id="@+id/mid_name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_artist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_artist_content"
            android:text="@string/artist" />

        <TextView
            android:id="@+id/mid_artist_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_album_content"
            android:text="@string/album" />

        <TextView
            android:id="@+id/mid_album_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_bitrate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_bitrate_content"
            android:text="@string/bitrate" />

        <TextView
            android:id="@+id/mid_bitrate_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_cfr_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_cfr_content"
            android:text="@string/capture_frame_rate" />

        <TextView
            android:id="@+id/mid_cfr_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_duration_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dmi_duration_content"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/mid_duration_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_path_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/mid_path_content"
            android:text="@string/path" />

        <TextView
            android:id="@+id/mid_path_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mid_size_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/mid_size_content"
            android:text="@string/size" />

        <TextView
            android:id="@+id/mid_size_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>