<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dockbar_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dockbar_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/record" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/dockbar_prev"
        android:layout_toEndOf="@+id/dockbar_pic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dockbar_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            android:text="@string/sample_song"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dockbar_singer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:text="@string/sample_artist"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/dockbar_prev"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_toStartOf="@+id/dockbar_play_state"
        android:contentDescription="@string/app_name"
        android:src="@drawable/prev_black" />

    <ImageButton
        android:id="@+id/dockbar_play_state"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_toStartOf="@+id/dockbar_next"
        android:contentDescription="@string/app_name"
        android:src="@drawable/play_black" />

    <ImageButton
        android:id="@+id/dockbar_next"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/next_black" />
</RelativeLayout>